# thestudio

./: .gitignore  README.md  TODO.md  backend_exited.txt  build-juce.ps1  build-vst-plugins.ps1  create-desktop-shortcut.ps1  dev.ps1  launch-stratum.cmd  mcp.json  package-lock.json  package.json  watch-juce.ps1
.cursor/rules/: git-commits.mdc  stratum-build-relaunch.mdc
.github/workflows/: macos-dmg.yml
.windsurf/workflows/: hot-reload-juce.md
backend/: flstudio.db  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: mcp-server.js  server.js
backend/src/routes/: beats.js  daw.js  patterns.js  plugins.js  projects.js  samples.js  workspaces.js
electron/: main.js  preload.js  vstBridge.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: juce-bridge.js
frontend/src/: App.css  App.jsx  audio.js  dsp.js
frontend/src/components/: AiPanel.jsx  Browser.jsx  ChannelRack.jsx  DraggableWindow.jsx  MenuBar.jsx  MidiPatternsModal.jsx  Mixer.jsx  PianoRoll.jsx  Playlist.jsx  PluginBrowser.jsx  ProjectManager.jsx  TitleBar.jsx  Toolbar.jsx
frontend/src/hooks/: useAudioRecorder.js  useMidiInput.js  useUndoableState.js
frontend/src/wam/: WamLoader.js
vst-host/: BUILD.md  CMakeLists.txt  README-macOS.md
vst-host/analysis/: analyze_loop.py  chord_to_midi.py  chordify_automation.py  launch-chordify-chrome.ps1  midi_to_bass.py  requirements.txt  run-chordify-login.ps1  setup-analysis.ps1  setup-chordify.ps1  stratum_btc.py
vst-host/data/popular-song-midi/: manifest.json
vst-host/scripts/: build-macos.sh  build.cmd  build.ps1  dev-watch.ps1  package-macos-dmg.sh
vst-host/src/: AIPanel.cpp  AIPanel.h  AgentRegistry.cpp  AgentRegistry.h  AppWindow.cpp  AppWindow.h  AudioEngine.cpp  AudioEngine.h  BottomDock.cpp  BottomDock.h  Browser.cpp  Browser.h  BrowserSettingsDialog.cpp  BrowserSettingsDialog.h  ChannelRack.cpp  ChannelRack.h  ChordAnalysisEngine.cpp  ChordAnalysisEngine.h  ChordifyAutomationEngine.cpp  ChordifyAutomationEngine.h  ChordifyMidiImporter.cpp  ChordifyMidiImporter.h  ConsistencyPanel.cpp  ConsistencyPanel.h  DrumMidiParser.cpp  DrumMidiParser.h  ElevenLabsClient.h  JsonRpcServer.cpp  JsonRpcServer.h  LoopBpmUtils.h  MainComponent.cpp  MainComponent.h  MarketplacePanel.cpp  MarketplacePanel.h  Midi808ImportSettings.cpp  Midi808ImportSettings.h  Mixer.cpp  Mixer.h  NativeBridge.cpp  NativeBridge.h  (+31 more)
vst-host/tools/: extract_drum_midi.py
vst-plugins/: CMakeLists.txt  README.md
vst-plugins/Samples/Piano/: README.md  SALAMANDER_LICENSE_NOTE.txt
vst-plugins/StratumGuitar/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vst-plugins/StratumPiano/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vst-plugins/_installed/VST3/Stratum Guitar.vst3/Contents/Resources/: moduleinfo.json
vst-plugins/_installed/VST3/Stratum Piano.vst3/Contents/Resources/: moduleinfo.json
